[gd_scene format=3 uid="uid://b6k2mxy8rn1qp"]

[ext_resource type="Script" path="res://scripts/game/card.gd" id="1_card"]

[sub_resource type="StyleBoxFlat" id="card_style"]
bg_color = Color(0.98, 0.97, 0.94, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 3
shadow_offset = Vector2(1, 2)

[sub_resource type="StyleBoxFlat" id="card_back_style"]
bg_color = Color(0.15, 0.25, 0.55, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.35, 0.7, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="select_highlight_style"]
bg_color = Color(0.3, 0.6, 1.0, 0.25)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.6, 1.0, 0.7)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Card" type="Control"]
custom_minimum_size = Vector2(72, 100)
layout_mode = 3
anchors_preset = 0
size = Vector2(72, 100)
script = ExtResource("1_card")

[node name="CardPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("card_style")

[node name="MarginContainer" type="MarginContainer" parent="CardPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 4

[node name="VBox" type="VBoxContainer" parent="CardPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SuitLabel" type="Label" parent="CardPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "â™ "

[node name="RankLabel" type="Label" parent="CardPanel/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpecialLabel" type="Label" parent="CardPanel/MarginContainer/VBox"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpecialImage" type="TextureRect" parent="CardPanel/MarginContainer/VBox"]
visible = false
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="SelectHighlight" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("select_highlight_style")

[node name="BackFace" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("card_back_style")

[node name="BackLabel" type="Label" parent="BackFace"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.55, 0.9, 1)
theme_override_font_sizes/font_size = 28
text = "T"
horizontal_alignment = 1
vertical_alignment = 1
